populated option form, some styling

--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -1,1 +1,67 @@
 /* TODO: Make it awesome */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body > header {
+  height: 70px;
+  background-color: rgb(161, 161, 161);
+  border-bottom: 7px solid rgb(255, 230, 0);
+}
+
+body > header > h1 {
+  text-align: left;
+  font-size: 30px;
+  padding-top: 30px;
+}
+
+nav {
+  float: right;
+  font-size: 24px;
+  margin-top: -30px;
+}
+
+nav > ul {
+  columns: 2;
+}
+
+.deck.col-1 {
+  display: inline-block;
+  background-color: pink;
+  margin-left: 0px;
+  width: 40%;
+  height: 100%;
+  text-align: left;
+  margin: 30px;
+}
+
+.card > header > h1 {
+  font-size: 24px;
+}
+
+.deck.col-2 {
+  display: inline-block;
+  background-color: rgb(255, 62, 95);
+  margin-right: 0px;
+  width: 40%;
+  height: 100%;
+  text-align: left;
+  margin: 30px;
+}
+
+footer {
+  display: flex;
+  bottom: 0;
+  height: 70px;
+  background-color: rgb(161, 161, 161);
+  border-top: 7px solid rgb(255, 230, 0);
+  margin-top: 15px;
+  text-align: center;
+  
+}
+
+footer > p {
+  margin: auto;
+  width: 50%;
+}
