--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -26,6 +26,20 @@ nav > ul {
   columns: 2;
 }
 
+#itemCount {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  text-align: center;
+  border-radius: 7px;
+  margin-left: 5px;
+  margin-right: 5px;
+  visibility: hidden;
+}
+
 .deck.col-1 {
   display: inline-block;
   background-color: pink;
